# Bom-Normalizer

./: .dockerignore  .env.example  .gitignore  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  Dockerfile  FINAL_CLEANUP_SUMMARY.md  FINAL_COMPETITION_CHECKLIST.md  FINAL_STATUS.md  FINAL_SUBMISSION_STATUS.md  FIXES_APPLIED.md  GITHUB_DESCRIPTION.md  LOGGING_FORMAT_COMPLIANCE.md  POTENTIAL_SCORING_ISSUES.md  PUSH_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.txt  README_HF.md  READY_TO_SUBMIT.md  START_HERE.md  SUBMISSION_GUIDE.md  SUBMISSION_READY.md  SUBMISSION_SUMMARY.md  UPDATE_GITHUB_DESCRIPTION.md  VALIDATION_README.md  WINNING_SUBMISSION_CHECKLIST.md  deploy.ps1  inference.py  openenv.yaml  pyproject.toml  quick_validate.py  requirements.txt  run_inference.ps1  validate-submission.ps1  validate-submission.sh
bom_normalizer/: __init__.py  env.py  generator.py  grader.py  models.py  reward.py  server.py  tasks.py
data/: part_numbers.json  unit_variants.json  vendor_aliases.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActionBuilder.tsx  BOMTable.tsx  EpisodeStats.tsx  RewardLog.tsx
server/: app.py
tests/: test_env.py  test_grader.py
