[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bom-normalizer"
version = "1.0.0"
description = "OpenEnv Bill of Materials (BOM) normalization environment for supply-chain data cleaning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
keywords = ["openenv", "reinforcement-learning", "supply-chain", "bom", "normalization", "fastapi"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=1.35.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/PROG-TaNi/Bom-Normalizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["bom_normalizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
